[package]
name = "traffic-spot-rs"
version = "0.1.5"
edition = "2021"
authors = ["Robert The Brucey"]
description = "Automatic start/stop of Services based on monitored network traffic"
homepage = "https://github.com/RobertTheBrucey/traffic-spot-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.2.0"
clap = { version = "4.4.18", features = ["derive"] }
default-net = "0.21.0"
itertools = "0.12.1"
